--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "lucide-react": "^0.562.0",
+    "motion": "^12.23.27",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-multi-carousel": "^2.8.6",
+    "react-multi-carousel": "^2.8.5",
     "react-router": "^7.11.0",
     "react-router-dom": "^7.11.0",
     "tailwindcss": "^4.1.18"
