--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "engines": {
-   "node": "",
-   "npm": ""
+    "node": "",
+    "npm": ""
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.11.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^12.1.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
